--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -13984,6 +13984,9 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
   color: #E5E5E5;
   opacity: 1;
 }
+#algoliaSearchResults .pricing {
+  padding: 10px;
+}
 @media (max-width: 767px) {
   #algoliaSearchResults .pricing {
     position: absolute;
@@ -14003,6 +14006,9 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
   #algoliaSearchResults .pricing {
     bottom: 8rem;
   }
+}
+#algoliaSearchResults .pricing .trip-price {
+  white-space: nowrap;
 }
 @media (max-width: 767px) {
   #algoliaSearchResults .compare-trip {
@@ -14031,6 +14037,12 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
   border: none !important;
   background-image: url('data:image/svg+xml,<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="Utility / Wishlist / Filled "><path id="heart filled" d="M15.2831 6.88733L15.9998 7.62405L16.7166 6.88733C19.8804 3.6354 25.5542 4.80328 27.5926 8.78422C28.5788 10.7101 28.7428 13.3985 27.0707 16.6974C25.435 19.9243 22.0445 23.7148 15.9998 27.7974C9.95514 23.7148 6.5647 19.9243 4.92902 16.6974C3.25687 13.3985 3.42088 10.7101 4.40704 8.78422C6.44548 4.80328 12.1193 3.6354 15.2831 6.88733Z" fill="black" stroke="white" stroke-width="2"/></g></svg>');
 }
+#algoliaSearchResults .carousel.slide {
+  display: flex;
+}
+#algoliaSearchResults .carousel.slide .carousel-control-next-icon, #algoliaSearchResults .carousel.slide .carousel-control-prev-icon {
+  filter: drop-shadow(2px 2px 2px black);
+}
 #algoliaSearchResults .carousel-item img {
   object-fit: cover;
   border-radius: 4px;
@@ -14040,7 +14052,12 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
     display: none;
   }
 }
-@media (max-width: 767.98px) {
+@media (min-width: 992px) {
+  #algoliaSearchResults .gallery-carousel {
+    height: 325px;
+  }
+}
+@media (max-width: 991.98px) {
   #algoliaSearchResults .gallery-carousel {
     height: 350px;
   }
@@ -14049,6 +14066,20 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
   #algoliaSearchResults .gallery-carousel {
     height: 300px;
   }
+}
+#algoliaSearchResults .carousel-indicators {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  padding: 10px 0;
+  margin: auto;
+  width: auto;
+  list-style: none;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.4) 70%);
+  justify-content: center;
 }
 #algoliaSearchResults .carousel-indicators button {
   width: 8px;
