PLP Enhancement: Ttucker plp grid styles (#495)
* Algolia: enhance algolia filtering options
make hotel level, activity level, trip style, and trip duration filters to be multi-select, adjust styles for refinement list
Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Algolia Multi Select: make destinations from second level with multi select
make dynamic widget creation, based on the destination taxonomy
Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Algolia Destinations Multiselect: add a toggle switch, to check/uncheck all regions from the continent

Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Trip Duration: add PDP name column in the admin panel to the taxonomy listing

Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Algolia Re-index: adjust Duration filter
make Duration filter to take the name from the new ACF field pdp_name or fall back to the default name
Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Algolia Multi-select filters: fix the destinations filter to show back not empty destinations

Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Trip list - grid

* PLP trips - grid mobile

* PLP trips list - fix the desktop view

* Algolia Multi Select: destinations preselect if loaded from the specific duration-taxonomy archive page

Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Destinations filter: add indeterminate checkbox for the continents

Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Algolia Archive page filters: make the filters collapsable

Asana Task: https://app.asana.com/0/1205828450090907/1208234849173401/f

* Algolia Price Filter: add the range input and range slider Algolia default widgets for the start price facet
add the html container, js widgets, and basic default style
Asana Task

--- a/wp-content/themes/trek-travel-theme/src/scss/_daterangepicker.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_daterangepicker.scss
@@ -50,7 +50,7 @@
                 thead {
                     tr:first-child {
                         th {
-                            padding-bottom: 16px;
+                            // padding-bottom: 16px;
                         }
                     }
                 }
@@ -75,7 +75,7 @@
                         }
                         
                         &.active:not(.end-date) {
-                            border-radius: 100%;
+                            // border-radius: 100%;
                             box-shadow: 16px 0px 0px 0px rgba(244,244,244,1);
                         }
                         &.in-range {
@@ -89,7 +89,7 @@
                         }
                         &.end-date {
                             box-shadow: none;
-                            border-radius: 100%;
+                            // border-radius: 100%;
                         }
 
                         &:hover {
@@ -129,7 +129,7 @@
     .daterangepicker td.available:hover, .daterangepicker th.available:hover{
         border: 1px solid #000000;
         background-color: transparent;
-        border-radius: 1rem;
+        // border-radius: 1rem;
     }
     .daterangepicker .daterangepicker_input{
         display: none !important;
@@ -139,10 +139,10 @@
     // }
     .daterangepicker td.active, .daterangepicker td.active:hover, .daterangepicker td.start-date.end-date{
         background-color: #000000 !important;
-        border-radius: 1rem;
+        // border-radius: 1rem;
     }
     .daterangepicker td.in-range{
-        background-color: #f4f4f4;
+        background-color: $blue;
 
     }
     .daterangepicker.dropup {
