--- a/wp-content/themes/trek-travel-theme/src/scss/_plp-hero.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_plp-hero.scss
@@ -44,6 +44,10 @@
         >.row {
         padding: 1rem 0;
         }
+
+        p {
+            margin: 0;
+        }
     }
     
     @include media-breakpoint-up(lg) {
