--- a/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
@@ -243,8 +243,12 @@
 .modal-search-filter {
   
   .modal-dialog {
-    top: 2%;
+    padding: 15px;
+    margin: auto;
     max-width: 780px;
+    height: 100%;
+    display: flex;
+    align-items: center;
   }
 
   .modal-body {
@@ -277,12 +281,13 @@
                   color: #000000;
               }
           }
-          
+          .ais-RefinementList-count,
           .ais-Menu-count{
               display: none;
           }
                      
       }
+      .ais-RefinementList--selected,
       .ais-Menu-item--selected{
           opacity: 1;
           // border-bottom: 3px solid black;
@@ -340,6 +345,8 @@
     position: relative !important;
     display: block !important;
     border: none;
+    padding: 0;
+    margin: 0;
     .calendar{
       max-width: 100% !important;
       width: 46% !important;
@@ -358,6 +365,7 @@
     }
   }
   .modal-footer{
+    border-color: $gray-500;
     .ais-ClearRefinements-button{
       visibility: hidden;
       line-height: 0;
@@ -415,9 +423,61 @@
 }
 
 #filterModal {
+  .modal-header {
+    background-color: black;
+    padding: 12px 16px;
+    position: sticky;
+    top: 0;
+    z-index: 999999;
+    left: 0;
+
+    h5.modal-title {
+      color: white !important;
+      line-height: 18px;
+    }
+
+    .btn-close {
+      padding: 8px !important;
+      i {
+        filter: invert(1);
+      }
+    }
+
+  }
+  .accordion-item {
+    margin-bottom: 20px;
+    border-color: #b5b5b5;
+    border-radius: 5px;
+    border: 1px solid #b5b5b5 !important;
+    background-color: #f4f4f4;
+    overflow: hidden;
+
+    .calendar-table {
+      background-color: transparent !important;
+    }
+    & > h5 {
+      // outline: 2px solid var(--bs-accordion-border-color);
+    }
+
+    button {
+      color: var(--bs-accordion-btn-color);
+      background-color: #f4f4f4;
+
+      &::after {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-plus-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z'/%3E%3C/svg%3E");
+        filter: grayscale(1) !important;
+      }
+
+      &:not(.collapsed) {
+        &::after {
+          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-dash-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z'/%3E%3C/svg%3E");
+        }
+      }
+    }
+  }
   .modal-content {
+    overflow: hidden;
     height: 93vh;
-    overflow: scroll;
   }
 
   .modal-header {
@@ -444,10 +504,11 @@
   }
 
   .modal-body {
-    padding-bottom: 70px;
+    overflow-y: scroll;
+    padding-bottom: 30px;
 
     @media screen and (max-width: 767px) {
-      width: 95%;
+      width: 100%;
       padding: 32px 11px 56px;
     
     }
@@ -456,7 +517,6 @@
       font-size: 18px;
       font-weight: 500;
       line-height: 28px;
-      margin-bottom: 20px;
 
       @media screen and (max-width: 768px) {
         font-size: 16px;
@@ -515,13 +575,15 @@
         }
       }
     }
+    .ais-RefinementList-list,
     .ais-Menu-list {
+      .ais-RefinementList-item,
       .ais-Menu-item {
         margin-bottom: 16px;
       }
       .menu-facet-container {
         & > a {
-          color: #666;
+          color: black;
           .f-check,
           .f-check-active {
             img {
@@ -534,6 +596,277 @@
       }
     }
 
+    // Algolia Price Range Input Style START
+    .ais-RangeInput {
+
+      color: rgb(58, 69, 112);
+
+      &-form {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 8px;
+        margin-bottom: 56px;
+
+        @media screen and (max-width: 470px) {
+          justify-content: center;
+        }
+
+        label {
+          width: 45%;
+          position: relative;
+          margin-top: 16px;
+
+          @media screen and (max-width: 470px) {
+            width: 43%;
+          }
+
+          input {
+            width: 100%;
+            padding: 20px;
+            border-radius: 5px;
+            border: 1px solid gray;
+            font-size: 14px !important;
+
+            &:focus,
+            &:focus-visible {
+              outline-color:#28AAE1;
+            }
+          }
+
+          &:first-child::before {
+            content: 'Minimum';
+            position:absolute;
+            left: 5px;
+            bottom: 97%;
+            font-size: 12px;
+            color: black;
+          }
+
+          &:last-of-type::before {
+            content: 'Maximum';
+            position:absolute;
+            left: 5px;
+            bottom: 97%;
+            font-size: 12px;
+            color: black;
+          }
+        }
+      }
+
+      &-input {
+        padding: 0 0.2rem;
+        width: 5rem;
+        height: 1.5rem;
+        line-height: 1.5rem;
+      }
+
+      &-separator {
+        width: 5%;
+        text-align: center;
+        margin-top: 24px;
+        @media screen and (max-width: 470px) {
+          width: 8%;
+        }
+      }
+
+      &-submit {
+        padding: 0;
+        overflow: visible;
+        font: inherit;
+        line-height: normal;
+        color: inherit;
+        background: none;
+        border: 0;
+        cursor: pointer;
+        -webkit-user-select: none;
+           -moz-user-select: none;
+                user-select: none;
+        background-color: black !important;
+        padding: 13px 24px;
+        height: auto;
+        font-size: 14px;
+        margin-top: 16px;
+
+        @media screen and (max-width: 470px) {
+          padding: 5px 24px;
+          margin-top: 8px;
+        }
+      }
+
+      &-submit::-moz-focus-inner {
+        padding: 0;
+        border: 0;
+      }
+
+      &-submit[disabled] {
+        cursor: default;
+      }
+
+      &-submit {
+        // margin-left: 0.3rem;
+        -webkit-appearance: none;
+          -moz-appearance: none;
+                appearance: none;
+        // padding: 0 0.5rem;
+        // height: 1.5rem;
+        line-height: 1.5rem;
+        // font-size: 0.8rem;
+        color: #fff;
+        // background-color: #0096db;
+        border: none;
+        border-radius: 5px;
+        transition: 0.2s ease-out;
+        outline: none;
+      }
+
+      &-submit:hover, &-submit:focus {
+        background-color: #0073a8;
+      }
+
+      // Hide the submit button.
+      &-submit{
+        display: none !important;
+      }
+    }
+    // Algolia Price Range Input Style END
+
+    // Algolia Price Range Slider Style START
+    .ais-Panel-body .ais-RangeSlider {
+      margin: 2rem 0;
+    }
+
+    .ais-RangeSlider {
+
+      color: rgb(58, 69, 112);
+
+      &-handle {
+        width: 20px;
+        height: 20px;
+        position: relative;
+        z-index: 1;
+        background: #ffffff;
+        border: 1px solid #46aeda;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+      
+      &-tooltip {
+        position: absolute;
+        background: #ffffff;
+        top: -22px;
+        font-size: 0.8em;
+      }
+      
+      &-value {
+        width: 40px;
+        position: absolute;
+        text-align: center;
+        margin-left: -20px;
+        padding-top: 15px;
+        font-size: 0.8em;
+      }
+      
+      &-marker {
+        position: absolute;
+        background: #ddd;
+        margin-left: -1px;
+        width: 1px;
+        height: 5px;
+      }
+
+      .rheostat {
+        overflow: visible;
+        margin-top: 40px;
+        margin-bottom: 40px;
+      }
+
+      .rheostat-background {
+        height: 6px;
+        top: 0px;
+        width: 100%;
+      }
+
+      .rheostat-handle {
+        margin-left: -12px;
+        top: -7px;
+      }
+
+      .rheostat-background {
+        position: relative;
+        background-color: #ffffff;
+        border: 1px solid #aaa;
+      }
+
+      .rheostat-progress {
+        position: absolute;
+        top: 1px;
+        height: 4px;
+        background-color: #333;
+      }
+
+      .rheostat-progress {
+        background-color: #28AAE1;
+      }
+      .rheostat-background {
+        border-color: #878faf;
+        box-sizing: border-box;
+        background-color: #d7d7d7;
+        border-radius: 10px;
+        border: none !important;
+      }
+      .rheostat-handle {
+        border-color: #28AAE1;
+      }
+      .rheostat-marker {
+        background-color: transparent;
+        display: none;
+      }
+    }
+
+    .rheostat-handle {
+      position: relative;
+      z-index: 1;
+      width: 20px;
+      height: 20px;
+      background-color: #fff;
+      border: 1px solid #333;
+      border-radius: 50%;
+      cursor: grab;
+    }
+
+    .rheostat-marker {
+      margin-left: -1px;
+      position: absolute;
+      width: 1px;
+      height: 5px;
+      background-color: #aaa;
+    }
+
+    .rheostat-marker--large {
+      height: 9px;
+    }
+
+    .rheostat-value {
+      margin-left: 50%;
+      padding-top: 15px;
+      position: absolute;
+      text-align: center;
+      transform: translateX(-50%);
+    }
+
+    .rheostat-tooltip {
+      margin-left: 50%;
+      position: absolute;
+      text-align: center;
+      transform: translateX(-50%);
+
+      font-size: 14px !important;
+      top: -26px;
+    }
+    // Algolia Price Range Slider END
+
     hr {
       margin-bottom: 32px;
       margin-top: 4px;
@@ -542,18 +875,20 @@
 
   .modal-footer {
     width: 100%;
-    position: fixed;
-    bottom: 2%;
-    left: 50%;
+    position: sticky;
+    bottom: 0;
+    // position: fixed;
+    // bottom: 2%;
+    // left: 50%;
     background: white;
     z-index: 9999;
-    max-width: 778px;
-    transform: translateX(-50%);
+    // max-width: 778px;
+    // transform: translateX(-50%);
     padding: 16px 12px;
 
     @media screen and (max-width: 767px) {
-      width: 95.2%;
-      padding: 20px;
+      // width: 95.2%;
+      padding: 15px;
     }
 
     .container {
@@ -610,7 +945,113 @@
       }
     }
     button {
-      padding: 12px 20px;
+      // padding: 12px 20px;
+    }
+  }
+
+  #destinations {
+    & > div {
+      &.select-all-active {
+        & > div.form-check {
+          input[type=checkbox] {
+            & ~ span.f-check-active {
+              display: block !important;
+              float: left;
+            }
+            
+            & ~ span.f-check {
+              display: none !important;
+              float: left;
+            }
+          }
+        }
+        li div div.menu-facet-container a.ais-anchor span.f-check-active {
+          display: block !important;
+          float: left;
+          margin-right: 10px;
+        }
+        li div div.menu-facet-container a.ais-anchor span.f-check {
+          display: none !important;
+          float: left;
+          margin-right: 10px;
+        }
+      }
+      &.select-all-inactive {
+        & > div.form-check {
+          input[type=checkbox] {
+            & ~ span.f-check-active {
+              display: none !important;
+              float: left;
+            }
+            
+            & ~ span.f-check {
+              display: block !important;
+              float: left;
+            }
+          }
+        }
+        li div div.menu-facet-container a.ais-anchor span.f-check-active {
+          display: none !important;
+          float: left;
+          margin-right: 10px;
+        }
+        li div div.menu-facet-container a.ais-anchor span.f-check {
+          display: block !important;
+          float: left;
+          margin-right: 10px;
+        }
+      }
+      & > .form-check {
+        position: relative;
+        input {
+          opacity: 0;
+          width: 23px;
+          height: 23px;
+          margin-top: 0;
+          &:indeterminate{
+            opacity: 1;
+            background-color: #000;
+            border-color: #000;
+            border-radius: 2px;
+          }
+        }
+        label {
+          font-weight: 600;
+        }
+        .f-check img,
+        .f-check-active img {
+          width: 23px;
+          height: 23px;
+          position: absolute;
+          top: 0;
+          left: 0;
+          pointer-events: none;
+        }
+        span.f-check-active {
+          display: none !important;
+          float: left;
+        }
+        span.f-check {
+          display: block !important;
+          float: left;
+        }
+        input[type="checkbox"]:checked ~ .f-check {
+          display: none !important;
+        }
+      
+        input[type="checkbox"]:checked ~ .f-check-active {
+          display: block !important;
+        }
+
+        input[type="checkbox"]:indeterminate ~ .f-check,
+        input[type="checkbox"]:indeterminate ~ .f-check-active {
+          display: none !important;
+        }
+      }
+
+      & > div:not(.form-check) {
+        padding-left: 28px;
+      }
     }
   }
 }
