--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
@@ -221,6 +221,10 @@
                         @media (max-width: 540px) {
                             // margin-bottom: .5rem;
                         }
+                        &.available::before{
+                            content: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6' r='6' fill='%23a6df1c'/%3E%3C/svg%3E");
+                            margin-right: 8px;
+                        }
                         &.join-waitlist::before{
                             content: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6' r='6' fill='%23F0AA97'/%3E%3C/svg%3E");
                             margin-right: 8px;
