Post Booking/Confirmed checklist message: add 'Good to go' message (#499)
* Post Booking/Confirmed checklist message: add 'Good to go' message
add confirmation message as a badge on the dashboard page and my trips page
Asana Task: https://app.asana.com/0/1205828450090907/1207550643257730/f

* Fix the trip success badge

* Refactor Good to Go Badge: move the inline style in the .scss files
add class names to the elements and move the style in the specific style sass file
Asana Task: https://app.asana.com/0/1205828450090907/1207550643257730/f

---------

Co-authored-by: Polina Todorova <ptodorova@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
@@ -66,6 +66,14 @@
         font-size: 12px;
         line-height: 16px;
     }
+    &__good-to-go-badge {
+        &__img {
+            width: 18px; margin-top: -2px; margin-right: 4px;
+        }
+        &__text {
+            color: #167332;
+        }
+    }
     a {
         &:hover {
             text-decoration: none;
