--- a/wp-content/themes/trek-travel-theme/src/scss/myaccount/_my-trips.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/myaccount/_my-trips.scss
@@ -30,6 +30,14 @@
             }
         }
     }
+    &__good-to-go-badge {
+        &__img {
+            width: 18px; margin-top: -2px; margin-right: 4px;
+        }
+        &__text {
+            color: #167332;
+        }
+    }
     @include media-breakpoint-up(lg) {
         .card{
             .past-title, .upcoming-title{
